opam-version: "2.0"
name: "memview"
authors: "James Lan"
homepage: "https://github.com/jameslan/memview"
maintainer: "jameslan@gmail.com"
dev-repo: "git@github.com:jameslan/memview.git"
bug-reports: "https://github.com/jameslan/memview/issues"
version: "0.0.1"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml"
  "dune" {build}
  "melange" {build}
  "ocamlformat" {with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
]
